--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This is just some website I'm creating to improve my web development knowledge.
+This is just some website I'm creating to improve my web development knowledge. Have a fun day !
